--- a/departures.html
+++ b/departures.html
@@ -3,87 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Departures 1</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Departures</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            background-color: #000; /* czarne tło */
+        }
+        table {
+            width: 100%;
+            height: 100%;
+            border-collapse: collapse;
+            table-layout: fixed;
+            font-family: monospace;
+            font-size: 1.5vw;
+        }
+        th {
+            background-color: #004080;
+            color: white;
+            padding: 0.5em;
+        }
+        td {
+            text-align: center;
+            background-color: #000;
+            color: #FFD700;
+            border-bottom: 1px solid #333;
+        }
+        tr:nth-child(even) td {
+            background-color: #111;
+        }
+        td img {
+            height: 2vw; /* stała wysokość logo */
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <header>Departures 1</header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="departures2.html">Departures 2</a>
-    </nav>
-    <main>
-        <table class="table-airport">
-            <tr>
-                <th>FLIGHT</th>
-                <th>LINE</th>
-                <th>GATE</th>
-                <th>TIME</th>
-            </tr>
-            <tr>
-            <td>SX001</td>
-            <td><img src="assets/linie/linie2.png" class="logo"></td>
-            <td>A1</td>
-            <td>07:03</td>
+    <table>
+        <tr>
+            <th>FLIGHT</th>
+            <th>LINE</th>
+            <th>GATE</th>
+            <th>TIME</th>
         </tr>
-<tr>
-            <td>SX002</td>
-            <td><img src="assets/linie/linie3.png" class="logo"></td>
-            <td>A2</td>
-            <td>08:06</td>
-        </tr>
-<tr>
-            <td>SX003</td>
-            <td><img src="assets/linie/linie4.png" class="logo"></td>
-            <td>A3</td>
-            <td>09:09</td>
-        </tr>
-<tr>
-            <td>SX004</td>
-            <td><img src="assets/linie/linie5.png" class="logo"></td>
-            <td>A4</td>
-            <td>10:12</td>
-        </tr>
-<tr>
-            <td>SX005</td>
-            <td><img src="assets/linie/linie6.png" class="logo"></td>
-            <td>A5</td>
-            <td>11:15</td>
-        </tr>
-<tr>
-            <td>SX006</td>
-            <td><img src="assets/linie/linie7.png" class="logo"></td>
-            <td>A6</td>
-            <td>12:18</td>
-        </tr>
-<tr>
-            <td>SX007</td>
-            <td><img src="assets/linie/linie8.png" class="logo"></td>
-            <td>A7</td>
-            <td>13:21</td>
-        </tr>
-<tr>
-            <td>SX008</td>
-            <td><img src="assets/linie/linie9.png" class="logo"></td>
-            <td>A8</td>
-            <td>14:24</td>
-        </tr>
-<tr>
-            <td>SX009</td>
-            <td><img src="assets/linie/linie10.png" class="logo"></td>
-            <td>A9</td>
-            <td>15:27</td>
-        </tr>
-<tr>
-            <td>SX010</td>
-            <td><img src="assets/linie/linie11.png" class="logo"></td>
-            <td>A0</td>
-            <td>16:30</td>
-        </tr>
-
-        </table>
-    </main>
-</div>
+        <tr><td>FR123</td><td><img src="assets/ryanair.png"></td><td>A12</td><td>08:30</td></tr>
+        <tr><td>LO456</td><td><img src="assets/lot.png"></td><td>B4</td><td>09:10</td></tr>
+        <tr><td>LH789</td><td><img src="assets/lufthansa.png"></td><td>C2</td><td>09:45</td></tr>
+        <tr><td>BA321</td><td><img src="assets/british.png"></td><td>D8</td><td>10:05</td></tr>
+        <tr><td>WZ654</td><td><img src="assets/wizzair.png"></td><td>A3</td><td>10:30</td></tr>
+        <tr><td>AF987</td><td><img src="assets/airfrance.png"></td><td>E1</td><td>11:00</td></tr>
+        <tr><td>KL741</td><td><img src="assets/klm.png"></td><td>B6</td><td>11:15</td></tr>
+        <tr><td>AY852</td><td><img src="assets/finnair.png"></td><td>C5</td><td>11:40</td></tr>
+        <tr><td>EK963</td><td><img src="assets/emirates.png"></td><td>F4</td><td>12:05</td></tr>
+        <tr><td>QR147</td><td><img src="assets/qatar.png"></td><td>G1</td><td>12:30</td></tr>
+        <tr><td>SU258</td><td><img src="assets/aeroflot.png"></td><td>H3</td><td>12:50</td></tr>
+        <tr><td>UA369</td><td><img src="assets/united.png"></td><td>I2</td><td>13:10</td></tr>
+    </table>
 </body>
 </html>
