--- a/departures.html
+++ b/departures.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Departures</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background-color: #000; /* czarne tło */
-        }
-        table {
-            width: 100%;
-            height: 100%;
-            border-collapse: collapse;
-            table-layout: fixed;
-            font-family: monospace;
-            font-size: 1.5vw;
-        }
-        th {
-            background-color: #004080;
-            color: white;
-            padding: 0.5em;
-        }
-        td {
-            text-align: center;
-            background-color: #000;
-            color: #FFD700;
-            border-bottom: 1px solid #333;
-        }
-        tr:nth-child(even) td {
-            background-color: #111;
-        }
-        td img {
-            height: 2vw; /* stała wysokość logo */
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Departures</title>
+<style>
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background-color: #000;
+    }
+    table {
+        width: 100%;
+        height: 100%;
+        border-collapse: collapse;
+        table-layout: fixed;
+        font-family: monospace;
+        font-size: 1.2vw; /* mniejsza czcionka */
+    }
+    th {
+        background-color: #004080;
+        color: white;
+        padding: 0.2em;
+    }
+    td {
+        text-align: center;
+        background-color: #000;
+        color: #FFD700;
+        border-bottom: 1px solid #333;
+        height: 4.5vh; /* wąskie wiersze */
+    }
+    tr:nth-child(even) td {
+        background-color: #111;
+    }
+    td img {
+        height: 2.5vh; /* stała wysokość logo */
+    }
+</style>
 </head>
 <body>
-    <table>
-        <tr>
-            <th>FLIGHT</th>
-            <th>LINE</th>
-            <th>GATE</th>
-            <th>TIME</th>
-        </tr>
-        <tr><td>FR123</td><td><img src="assets/ryanair.png"></td><td>A12</td><td>08:30</td></tr>
-        <tr><td>LO456</td><td><img src="assets/lot.png"></td><td>B4</td><td>09:10</td></tr>
-        <tr><td>LH789</td><td><img src="assets/lufthansa.png"></td><td>C2</td><td>09:45</td></tr>
-        <tr><td>BA321</td><td><img src="assets/british.png"></td><td>D8</td><td>10:05</td></tr>
-        <tr><td>WZ654</td><td><img src="assets/wizzair.png"></td><td>A3</td><td>10:30</td></tr>
-        <tr><td>AF987</td><td><img src="assets/airfrance.png"></td><td>E1</td><td>11:00</td></tr>
-        <tr><td>KL741</td><td><img src="assets/klm.png"></td><td>B6</td><td>11:15</td></tr>
-        <tr><td>AY852</td><td><img src="assets/finnair.png"></td><td>C5</td><td>11:40</td></tr>
-        <tr><td>EK963</td><td><img src="assets/emirates.png"></td><td>F4</td><td>12:05</td></tr>
-        <tr><td>QR147</td><td><img src="assets/qatar.png"></td><td>G1</td><td>12:30</td></tr>
-        <tr><td>SU258</td><td><img src="assets/aeroflot.png"></td><td>H3</td><td>12:50</td></tr>
-        <tr><td>UA369</td><td><img src="assets/united.png"></td><td>I2</td><td>13:10</td></tr>
-    </table>
+<table>
+    <tr>
+        <th>FLIGHT</th>
+        <th>LINE</th>
+        <th>GATE</th>
+        <th>TIME</th>
+    </tr>
+    <tr><td>FR123</td><td><img src="assets/ryanair.png"></td><td>A12</td><td>08:30</td></tr>
+    <tr><td>LO456</td><td><img src="assets/lot.png"></td><td>B4</td><td>08:45</td></tr>
+    <tr><td>LH789</td><td><img src="assets/lufthansa.png"></td><td>C2</td><td>09:00</td></tr>
+    <tr><td>BA321</td><td><img src="assets/british.png"></td><td>D8</td><td>09:15</td></tr>
+    <tr><td>WZ654</td><td><img src="assets/wizzair.png"></td><td>A3</td><td>09:30</td></tr>
+    <tr><td>AF987</td><td><img src="assets/airfrance.png"></td><td>E1</td><td>09:45</td></tr>
+    <tr><td>KL741</td><td><img src="assets/klm.png"></td><td>B6</td><td>10:00</td></tr>
+    <tr><td>AY852</td><td><img src="assets/finnair.png"></td><td>C5</td><td>10:15</td></tr>
+    <tr><td>EK963</td><td><img src="assets/emirates.png"></td><td>F4</td><td>10:30</td></tr>
+    <tr><td>QR147</td><td><img src="assets/qatar.png"></td><td>G1</td><td>10:45</td></tr>
+    <tr><td>SU258</td><td><img src="assets/aeroflot.png"></td><td>H3</td><td>11:00</td></tr>
+    <tr><td>UA369</td><td><img src="assets/united.png"></td><td>I2</td><td>11:15</td></tr>
+    <tr><td>FR741</td><td><img src="assets/ryanair.png"></td><td>A1</td><td>11:30</td></tr>
+    <tr><td>LO963</td><td><img src="assets/lot.png"></td><td>B2</td><td>11:45</td></tr>
+    <tr><td>LH147</td><td><img src="assets/lufthansa.png"></td><td>C4</td><td>12:00</td></tr>
+    <tr><td>BA258</td><td><img src="assets/british.png"></td><td>D1</td><td>12:15</td></tr>
+    <tr><td>WZ369</td><td><img src="assets/wizzair.png"></td><td>E2</td><td>12:30</td></tr>
+    <tr><td>AF741</td><td><img src="assets/airfrance.png"></td><td>F1</td><td>12:45</td></tr>
+    <tr><td>KL852</td><td><img src="assets/klm.png"></td><td>G3</td><td>13:00</td></tr>
+    <tr><td>AY963</td><td><img src="assets/finnair.png"></td><td>H2</td><td>13:15</td></tr>
+</table>
 </body>
 </html>
