--- a/departures.html
+++ b/departures.html
@@ -17,25 +17,25 @@
         border-collapse: collapse;
         table-layout: fixed;
         font-family: monospace;
-        font-size: 1.2vw; /* mniejsza czcionka */
+        font-size: 1.4vw; /* trochę większa czcionka */
     }
     th {
         background-color: #004080;
         color: white;
-        padding: 0.2em;
+        padding: 0.3em;
     }
     td {
         text-align: center;
         background-color: #000;
         color: #FFD700;
         border-bottom: 1px solid #333;
-        height: 4.5vh; /* wąskie wiersze */
+        height: 6vh; /* trochę wyższe wiersze */
     }
     tr:nth-child(even) td {
         background-color: #111;
     }
     td img {
-        height: 2.5vh; /* stała wysokość logo */
+        height: 3.5vh; /* większe logo */
     }
 </style>
 </head>
@@ -57,16 +57,6 @@
     <tr><td>AY852</td><td><img src="assets/finnair.png"></td><td>C5</td><td>10:15</td></tr>
     <tr><td>EK963</td><td><img src="assets/emirates.png"></td><td>F4</td><td>10:30</td></tr>
     <tr><td>QR147</td><td><img src="assets/qatar.png"></td><td>G1</td><td>10:45</td></tr>
-    <tr><td>SU258</td><td><img src="assets/aeroflot.png"></td><td>H3</td><td>11:00</td></tr>
-    <tr><td>UA369</td><td><img src="assets/united.png"></td><td>I2</td><td>11:15</td></tr>
-    <tr><td>FR741</td><td><img src="assets/ryanair.png"></td><td>A1</td><td>11:30</td></tr>
-    <tr><td>LO963</td><td><img src="assets/lot.png"></td><td>B2</td><td>11:45</td></tr>
-    <tr><td>LH147</td><td><img src="assets/lufthansa.png"></td><td>C4</td><td>12:00</td></tr>
-    <tr><td>BA258</td><td><img src="assets/british.png"></td><td>D1</td><td>12:15</td></tr>
-    <tr><td>WZ369</td><td><img src="assets/wizzair.png"></td><td>E2</td><td>12:30</td></tr>
-    <tr><td>AF741</td><td><img src="assets/airfrance.png"></td><td>F1</td><td>12:45</td></tr>
-    <tr><td>KL852</td><td><img src="assets/klm.png"></td><td>G3</td><td>13:00</td></tr>
-    <tr><td>AY963</td><td><img src="assets/finnair.png"></td><td>H2</td><td>13:15</td></tr>
 </table>
 </body>
 </html>
