--- a/departures.html
+++ b/departures.html
@@ -17,11 +17,10 @@
         border-collapse: collapse;
         table-layout: fixed;
         font-family: monospace;
-        font-size: 1.5vw; /* większa czcionka dla całej tabeli */
+        font-size: 1.5vw; /* większa czcionka */
     }
     th, td {
-        height: 6vh; /* wyższe wiersze dla wszystkich komórek */
-        padding: 0.3em;
+        padding: 0.7em 0; /* większy pionowy padding */
         text-align: center;
         vertical-align: middle;
     }
@@ -59,4 +58,7 @@
     <tr><td>KL741</td><td><img src="assets/klm.png" alt="KLM"></td><td>B6</td><td>10:00</td></tr>
     <tr><td>AY852</td><td><img src="assets/finnair.png" alt="Finnair"></td><td>C5</td><td>10:15</td></tr>
     <tr><td>EK963</td><td><img src="assets/emirates.png" alt="Emirates"></td><td>F4</td><td>10:30</td></tr>
-    <tr><td>QR147</td><td><img src="assets/qatar.png
+    <tr><td>QR147</td><td><img src="assets/qatar.png" alt="Qatar Airways"></td><td>G1</td><td>10:45</td></tr>
+</table>
+</body>
+</html>
