--- a/departures2.html
+++ b/departures2.html
@@ -1,89 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Departures 2</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Departures</title>
+<style>
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background-color: #000;
+    }
+    table {
+        width: 100%;
+        height: 100%;
+        border-collapse: collapse;
+        table-layout: fixed;
+        font-family: monospace;
+        font-size: 1.5vw;
+    }
+    th, td {
+        padding: 0.7em 0;
+        text-align: center;
+        vertical-align: middle;
+        border-bottom: 1px solid #333;
+        color: #FFD700;
+        background-color: #000;
+    }
+    th {
+        background-color: #004080;
+        color: white;
+    }
+    tr:nth-child(even) td {
+        background-color: #111;
+    }
+    td img {
+        height: 4.5vh; /* większe logo, ale nie za duże */
+        max-width: 100%;
+        object-fit: contain;
+    }
+</style>
 </head>
 <body>
-<div class="container">
-    <header>Departures 2</header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="departures.html">Departures 1</a>
-    </nav>
-    <main>
-        <table class="table-airport">
-            <tr>
-                <th>FLIGHT</th>
-                <th>LINE</th>
-                <th>GATE</th>
-                <th>TIME</th>
-            </tr>
-            <tr>
-            <td>SX011</td>
-            <td><img src="assets/linie/linie12.png" class="logo"></td>
-            <td>A1</td>
-            <td>17:33</td>
-        </tr>
-<tr>
-            <td>SX012</td>
-            <td><img src="assets/linie/linie13.png" class="logo"></td>
-            <td>A2</td>
-            <td>18:36</td>
-        </tr>
-<tr>
-            <td>SX013</td>
-            <td><img src="assets/linie/linie14.png" class="logo"></td>
-            <td>A3</td>
-            <td>19:39</td>
-        </tr>
-<tr>
-            <td>SX014</td>
-            <td><img src="assets/linie/linie15.png" class="logo"></td>
-            <td>A4</td>
-            <td>20:42</td>
-        </tr>
-<tr>
-            <td>SX015</td>
-            <td><img src="assets/linie/linie1.png" class="logo"></td>
-            <td>A5</td>
-            <td>21:45</td>
-        </tr>
-<tr>
-            <td>SX016</td>
-            <td><img src="assets/linie/linie2.png" class="logo"></td>
-            <td>A6</td>
-            <td>22:48</td>
-        </tr>
-<tr>
-            <td>SX017</td>
-            <td><img src="assets/linie/linie3.png" class="logo"></td>
-            <td>A7</td>
-            <td>23:51</td>
-        </tr>
-<tr>
-            <td>SX018</td>
-            <td><img src="assets/linie/linie4.png" class="logo"></td>
-            <td>A8</td>
-            <td>00:54</td>
-        </tr>
-<tr>
-            <td>SX019</td>
-            <td><img src="assets/linie/linie5.png" class="logo"></td>
-            <td>A9</td>
-            <td>01:57</td>
-        </tr>
-<tr>
-            <td>SX020</td>
-            <td><img src="assets/linie/linie6.png" class="logo"></td>
-            <td>A0</td>
-            <td>02:00</td>
-        </tr>
-
-        </table>
-    </main>
-</div>
+<table>
+    <tr>
+        <th>FLIGHT</th>
+        <th>LINE</th>
+        <th>GATE</th>
+        <th>TIME</th>
+    </tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td></td><td></td><td></td></tr>
+</table>
 </body>
 </html>
