--- a/departures.html
+++ b/departures.html
@@ -39,6 +39,19 @@
     td img {
         height: 3.5vh; /* większe logo */
     }
+
+td {
+    background-color: #000;
+    color: #FFD700;
+    border-bottom: 1px solid #333;
+    max-height: 5vh;        /* maksymalna wysokość wiersza */
+    overflow: hidden;       /* ukrywa nadmiar tekstu */
+    white-space: normal;    /* pozwala na zawijanie tekstu */
+    text-overflow: ellipsis; /* dodaje "..." jeśli tekst się nie mieści */
+    word-wrap: break-word;  /* łamanie długich słów */
+    padding: 0.3em 0.5em;   /* zmniejszony padding, żeby było więcej miejsca */
+}
+
 </style>
 </head>
 <body>
