--- a/departures.html
+++ b/departures.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+do tego kodu: <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
@@ -37,21 +37,8 @@
         background-color: #111;
     }
     td img {
-        height: 3.5vh; /* większe logo */
+        height: 4.0vh; /* większe logo */
     }
-
-td {
-    background-color: #000;
-    color: #FFD700;
-    border-bottom: 1px solid #333;
-    max-height: 5vh;        /* maksymalna wysokość wiersza */
-    overflow: hidden;       /* ukrywa nadmiar tekstu */
-    white-space: normal;    /* pozwala na zawijanie tekstu */
-    text-overflow: ellipsis; /* dodaje "..." jeśli tekst się nie mieści */
-    word-wrap: break-word;  /* łamanie długich słów */
-    padding: 0.3em 0.5em;   /* zmniejszony padding, żeby było więcej miejsca */
-}
-
 </style>
 </head>
 <body>
