--- a/departures.html
+++ b/departures.html
@@ -59,15 +59,15 @@ do tego kodu: <!DOCTYPE html>
         <td>Gate will be announcement at 5:45</td>
         <td>07:15</td>
     </tr>
-    <tr>ㅤ<td>LO456</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr>ㅤ<td>LH789</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr>ㅤ<td>BA321</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr>ㅤ<td>WZ654</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr>ㅤ<td>AF987</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr>ㅤ<td>KL741</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr>ㅤ<td>AY852</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr>ㅤ<td>EK963</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr>ㅤ<td></td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
 </table>
 </body>
 </html>
