--- a/departures.html
+++ b/departures.html
@@ -37,7 +37,7 @@ do tego kodu: <!DOCTYPE html>
         background-color: #111;
     }
     td img {
-        height: 4.0vh; /* większe logo */
+        height: 3.5vh; /* większe logo */
     }
 </style>
 </head>
@@ -59,15 +59,15 @@ do tego kodu: <!DOCTYPE html>
         <td>Gate will be announcement at 5:45</td>
         <td>07:15</td>
     </tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
-    <tr><td>ㅤ</td><td><img src="" ></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="https://res.cloudinary.com/teepublic/image/private/s--5Bngo2VW--/t_Resized%20Artwork/c_fit,g_north_west,h_1054,w_1054/co_ffffff,e_outline:53/co_ffffff,e_outline:inner_fill:53/co_bbbbbb,e_outline:3:1000/c_mpad,g_center,h_1260,w_1260/b_rgb:eeeeee/c_limit,f_auto,h_630,q_auto:good:420,w_630/v1573133373/production/designs/6631029_0.jpg" alt=""></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="" alt=""></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="" alt=""></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="" alt=""></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="" alt=""></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="" alt=""></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="" alt=""></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="" alt=""></td><td></td><td></td><td></td><td></td></tr>
+    <tr><td></td><td><img src="" alt=""></td><td></td><td></td><td></td><td></td></tr>
 </table>
 </body>
 </html>
