--- a/boarding-flight-1.html
+++ b/boarding-flight-1.html
@@ -10,10 +10,10 @@
 <div class="container">
     <header>Lot 1</header>
     <main>
-        <img src="assets/linie/linie1.png" alt="Linia" class="logo">
-        <p style="text-align:center;font-size:1.5em;">Flight: SX001</p>
-        <p style="text-align:center;font-size:1.2em;">Gate: A1</p>
-        <p style="text-align:center;font-size:1.2em;">Destination: Example City 1</p>
+        <img src="https://download.logo.wine/logo/Ryanair/Ryanair-Logo.wine.png" alt="Linia" class="logo">
+        <p style="text-align:center;font-size:1.5em;">Flight: FR 324</p>
+        <p style="text-align:center;font-size:1.2em;">Gate: 3</p>
+        <p style="text-align:center;font-size:1.2em;">Destination: Krakow</p>
         <div class="boarding-text">BOARDING</div>
     </main>
 </div>
