--- a/boarding-flight-1.html
+++ b/boarding-flight-1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <header>Lot 1</header>
+    <header>KRAKOW</header>
     <main>
         <img src="https://download.logo.wine/logo/Ryanair/Ryanair-Logo.wine.png" alt="Linia" class="logo">
         <p style="text-align:center;font-size:1.5em;">Flight: FR 324</p>
