--- a/boarding-flight-2.html
+++ b/boarding-flight-2.html
@@ -65,12 +65,12 @@
 </head>
 <body>
 <div class="container">
-    <header>Lot 2</header>
+    <header>KRAKOW</header>
     <main>
         <img src="assets/linie/linie2.png" alt="Linia" class="logo">
-        <p>Flight: SX002</p>
+        <p>Flight: FR324</p>
         <p>Gate: A2</p>
-        <p>Destination: Example City 2</p>
+        <p>Destination: Krakow</p>
         <div class="boarding-text">BOARDING</div>
     </main>
 </div>
