--- a/boarding-flight-2.html
+++ b/boarding-flight-2.html
@@ -67,7 +67,7 @@
 <div class="container">
     <header>KRAKOW</header>
     <main>
-        <img src="assets/linie/linie2.png" alt="Linia" class="logo">
+        <img src="https://download.logo.wine/logo/Ryanair/Ryanair-Logo.wine.png" alt="RYANAIR" class="logo">
         <p>Flight: FR324</p>
         <p>Gate: A2</p>
         <p>Destination: Krakow</p>
