--- a/boarding-flight-2.html
+++ b/boarding-flight-2.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Lot 2</title>
+    <title>Lot FR324</title>
     <style>
         html, body {
             margin: 0;
@@ -10,7 +10,7 @@
             width: 100%;
             height: 100%;
             font-family: Arial, sans-serif;
-            background-color: #0a0a0a;
+            background-color: #000000;
             color: #ffffff;
             overflow: hidden;
         }
@@ -21,15 +21,15 @@
             justify-content: space-between;
             align-items: center;
             height: 100%;
-            padding: 1vh 2vw;
+            padding: 2vh 2vw;
             box-sizing: border-box;
         }
 
         header {
-            font-size: 3vh;
+            font-size: 5vh;
             font-weight: bold;
             text-align: center;
-            padding: 1vh 0;
+            padding-bottom: 1vh;
             width: 100%;
             border-bottom: 2px solid #ffffff;
         }
@@ -40,37 +40,38 @@
             align-items: center;
             justify-content: center;
             flex-grow: 1;
-            gap: 1vh;
+            gap: 1.5vh;
         }
 
         .logo {
-            max-height: 20%;
+            max-height: 18vh;
             max-width: 80%;
             object-fit: contain;
         }
 
         .boarding-text {
-            font-size: 4vh;
+            font-size: 5vh;
             font-weight: bold;
             color: #00ff00;
             margin-top: 2vh;
+            text-shadow: 0 0 5px #00ff00;
         }
 
         p {
             margin: 0;
-            font-size: 2.5vh;
+            font-size: 3.2vh;
             text-align: center;
         }
     </style>
 </head>
 <body>
 <div class="container">
-    <header>KRAKOW</header>
+    <header>KRAKÓW</header>
     <main>
         <img src="https://download.logo.wine/logo/Ryanair/Ryanair-Logo.wine.png" alt="RYANAIR" class="logo">
         <p>Flight: FR324</p>
         <p>Gate: A2</p>
-        <p>Destination: Krakow</p>
+        <p>Destination: Kraków</p>
         <div class="boarding-text">BOARDING</div>
     </main>
 </div>
