--- a/boarding-flight-2.html
+++ b/boarding-flight-2.html
@@ -42,13 +42,14 @@
             flex-grow: 1;
             gap: 1vh;
         }
-
+ 
         .logo {
-            max-height: 15vh;
-            max-width: 80%;
-            object-fit: contain;
+             max-height: 40vh; /* wcześniej było 15vh */
+             max-width: 90%;
+             object-fit: contain;
         }
 
+         
         .boarding-text {
             font-size: 8vh;
             font-weight: bold;
