--- a/crewsystem.html
+++ b/crewsystem.html
@@ -146,49 +146,49 @@
       Lufthansa: {
         LH101: {
           class: "Business",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         },
         LH102: {
           class: "Economy",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         },
         LH103: {
           class: "Premium Economy",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         }
       },
       Emirates: {
         EK201: {
           class: "First",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         },
         EK202: {
           class: "Business",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         },
         EK203: {
           class: "Economy",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         }
       },
       LOT: {
         LO301: {
           class: "Business",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         },
         LO302: {
           class: "Economy",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         },
         LO303: {
           class: "Premium",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         }
       },
       WizzAir: {
         WZ401: {
           class: "Economy",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
         },
         WZ402: {
           class: "Wizz Plus",
