--- a/crewsystem.html
+++ b/crewsystem.html
@@ -90,10 +90,6 @@
     <div class="navbar" id="airlines">
       <button onclick="selectAirline('Ryanair')">Ryanair</button>
       <button onclick="selectAirline('Lufthansa')">Lufthansa</button>
-      <button onclick="selectAirline('Emirates')">Emirates</button>
-      <button onclick="selectAirline('LOT')">LOT</button>
-      <button onclick="selectAirline('WizzAir')">WizzAir</button>
-      <button onclick="selectAirline('KLM')">KLM</button>
     </div>
 
     <div class="sub-navbar" id="flights"></div>
@@ -105,48 +101,21 @@
       Ryanair: {
         FR324: {
           class: "Economy",
-          passengers: [
-            "Quba_TV [E]", "SkyHunter", "Jetstream", "CloudSurfer", "PixelPilot",
-            "FlightMaster", "TurboTom", "WingWalker", "BlockFlyer", "RedFalcon",
-            "BlueComet", "EnderJet", "CraftCruiser", "AirJakub", "GoldenWing",
-            "ShadowFlight", "DiamondSky", "EchoPilot", "NovaFlyer", "StormRider",
-            "SkyCrafter", "BlockCaptain", "FlightFox", "JetJakub", "CloudCraze",
-            "AeroAce", "PixelFalcon", "SkyLord", "WingedWolf", "FlightKing",
-            "TurboJakub", "EnderCaptain", "JetWizard", "SkyRacer", "CloudKnight",
-            "FlightNinja", "BlockStorm", "AirWizard", "SkyJakub"
-          ]
+          passengers: ["Quba_TV", "SkyHunter", "Jetstream", "CloudSurfer", "PixelPilot"]
         },
         FR325: {
           class: "Economy",
-          passengers: [
-            "EcoFlyer1", "EcoFlyer2", "EcoFlyer3", "EcoFlyer4", "EcoFlyer5",
-            "EcoFlyer6", "EcoFlyer7", "EcoFlyer8", "EcoFlyer9", "EcoFlyer10",
-            "EcoFlyer11", "EcoFlyer12", "EcoFlyer13", "EcoFlyer14", "EcoFlyer15",
-            "EcoFlyer16", "EcoFlyer17", "EcoFlyer18", "EcoFlyer19", "EcoFlyer20",
-            "EcoFlyer21", "EcoFlyer22", "EcoFlyer23", "EcoFlyer24", "EcoFlyer25",
-            "EcoFlyer26", "EcoFlyer27", "EcoFlyer28", "EcoFlyer29", "EcoFlyer30",
-            "EcoFlyer31", "EcoFlyer32", "EcoFlyer33", "EcoFlyer34", "EcoFlyer35",
-            "EcoFlyer36", "EcoFlyer37", "EcoFlyer38", "EcoFlyer39", "EcoFlyer40"
-          ]
+          passengers: ["EcoFlyer1", "EcoFlyer2", "EcoFlyer3", "EcoFlyer4", "EcoFlyer5"]
         },
         FR326: {
           class: "Business",
-          passengers: [
-            "BizBoss1", "BizBoss2", "BizBoss3", "BizBoss4", "BizBoss5",
-            "BizBoss6", "BizBoss7", "BizBoss8", "BizBoss9", "BizBoss10",
-            "BizBoss11", "BizBoss12", "BizBoss13", "BizBoss14", "BizBoss15",
-            "BizBoss16", "BizBoss17", "BizBoss18", "BizBoss19", "BizBoss20",
-            "BizBoss21", "BizBoss22", "BizBoss23", "BizBoss24", "BizBoss25",
-            "BizBoss26", "BizBoss27", "BizBoss28", "BizBoss29", "BizBoss30",
-            "BizBoss31", "BizBoss32", "BizBoss33", "BizBoss34", "BizBoss35",
-            "BizBoss36", "BizBoss37", "BizBoss38", "BizBoss39", "BizBoss40"
-          ]
+          passengers: ["BizBoss1", "BizBoss2", "BizBoss3", "BizBoss4", "BizBoss5"]
         }
       },
       Lufthansa: {
         LH101: {
           class: "Business",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
+          passengers: ["Julia", "Tomek", "Anna", "Marek", "Ola"]
         },
         LH102: {
           class: "Economy",
@@ -154,69 +123,18 @@
         },
         LH103: {
           class: "Premium Economy",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        }
-      },
-      Emirates: {
-        EK201: {
-          class: "First",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        },
-        EK202: {
-          class: "Business",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        },
-        EK203: {
-          class: "Economy",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        }
-      },
-      LOT: {
-        LO301: {
-          class: "Business",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        },
-        LO302: {
-          class: "Economy",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        },
-        LO303: {
-          class: "Premium",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        }
-      },
-      WizzAir: {
-        WZ401: {
-          class: "Economy",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        },
-        WZ402: {
-          class: "Wizz Plus",
-          passengers: [/* wpisz swoje 40 nicków */]
-        },
-        WZ403: {
-          class: "Business",
-          passengers: [/* wpisz swoje 40 nicków */]
-        }
-      },
-      KLM: {
-        KL501: {
-          class: "Economy",
-          passengers: [/* wpisz swoje 40 nicków */]
-        },
-        KL502: {
-          class: "Business",
-          passengers: [/* wpisz swoje 40 nicków */]
-        },
-        KL503: {
-          class: "Premium",
-          passengers: [/* wpisz swoje 40 nicków */]
+          passengers: ["VIP1", "VIP2", "VIP3", "VIP4", "VIP5"]
         }
       }
     };
 
     function selectAirline(name) {
       const flights = flightData[name];
+      if (!flights) {
+        alert("Brak lotów dla tej linii.");
+        return;
+      }
+
       const subNav = document.getElementById("flights");
       subNav.innerHTML = "";
 
@@ -231,24 +149,31 @@
     }
 
     function showTable(flightCode, airline) {
-  const flight = flightData[airline][flightCode];
-  const table = document.createElement("table");
-  const thead = document.createElement("thead");
-  const tbody = document.createElement("tbody");
+      const flight = flightData[airline][flightCode];
+      if (!flight || !flight.passengers) {
+        alert("Brak danych dla tego lotu.");
+        return;
+      }
 
-  thead.innerHTML = `<tr><th>Nick</th><th>Klasa</th></tr>`;
+      const table = document.createElement("table");
+      const thead = document.createElement("thead");
+      const tbody = document.createElement("tbody");
 
-  flight.passengers.forEach(nick => {
-    const row = document.createElement("tr");
-    row.innerHTML = `<td>${nick}</td><td>${flight.class}</td>`;
-    tbody.appendChild(row);
-  });
+      thead.innerHTML = `<tr><th>Nick</th><th>Klasa</th></tr>`;
 
-  table.appendChild(thead);
-  table.appendChild(tbody);
+      flight.passengers.forEach(nick => {
+        const row = document.createElement("tr");
+        row.innerHTML = `<td>${nick}</td><td>${flight.class}</td>`;
+        tbody.appendChild(row);
+      });
 
-  const container = document.getElementById("passengerTable");
-  container.innerHTML = "";
-  container.appendChild(table);
-}
+      table.appendChild(thead);
+      table.appendChild(tbody);
 
+      const container = document.getElementById("passengerTable");
+      container.innerHTML = "";
+      container.appendChild(table);
+    }
+  </script>
+</body>
+</html>
