--- a/crewsystem.html
+++ b/crewsystem.html
@@ -41,7 +41,7 @@
       color: #fff;
       border: none;
       padding: 2vh 3vw;
-      font-size: 4vh;
+      font-size: 5vh;
       cursor: pointer;
       border-radius: 8px;
       box-shadow: 0 0 10px #004080;
@@ -54,26 +54,26 @@
     .table-container {
       width: 100%;
       max-height: 60vh;
-      overflow-y: auto;
+      overflow-y: scroll;
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-      font-size: 3.5vh;
+      font-size: 5vh;
     }
 
     th, td {
       border: 1px solid #333;
-      padding: 2vh;
+      padding: 3vh;
       text-align: center;
-      height: 6vh;
+      height: 8vh;
     }
 
     th {
       background-color: #004080;
       color: #fff;
-      font-size: 4vh;
+      font-size: 5.5vh;
     }
 
     tr:nth-child(even) {
@@ -101,29 +101,50 @@
       Ryanair: {
         FR324: {
           class: "Economy",
-          passengers: ["Quba_TV", "SkyHunter", "Jetstream", "CloudSurfer", "PixelPilot"]
+          passengers: [
+            "Quba_TV",
+            "SkyHunter",
+            "PixelPilot",
+            "BlockyBoss",
+            "RedstoneRider",
+            "CraftLord",
+            "EnderEcho",
+            "MineMaster",
+            "Jakubek_99",
+            "FlyHighPL"
+          ]
         },
         FR325: {
           class: "Economy",
-          passengers: ["EcoFlyer1", "EcoFlyer2", "EcoFlyer3", "EcoFlyer4", "EcoFlyer5"]
-        },
-        FR326: {
-          class: "Business",
-          passengers: ["BizBoss1", "BizBoss2", "BizBoss3", "BizBoss4", "BizBoss5"]
+          passengers: [
+            "TurboSteve",
+            "CreeperKing",
+            "DiamondDiver",
+            "NetherNinja",
+            "JakubTV",
+            "CloudCrafter",
+            "BuildBro",
+            "MobSlayer",
+            "GoldenPick",
+            "FastFurnace"
+          ]
         }
       },
       Lufthansa: {
         LH101: {
           class: "Business",
-          passengers: ["Julia", "Tomek", "Anna", "Marek", "Ola"]
-        },
-        LH102: {
-          class: "Economy",
-          passengers: ["Nick1", "Nick2", "Nick3", "Nick4", "Nick5"]
-        },
-        LH103: {
-          class: "Premium Economy",
-          passengers: ["VIP1", "VIP2", "VIP3", "VIP4", "VIP5"]
+          passengers: [
+            "EliteJakub",
+            "SkyVIP",
+            "CraftCEO",
+            "RedstoneRich",
+            "LuxurySteve",
+            "EnderExec",
+            "MineJet",
+            "Jakub_Pro",
+            "FlyBoss",
+            "GoldenSuit"
+          ]
         }
       }
     };
